--- a/client/src/Styles/Pure.css
+++ b/client/src/Styles/Pure.css
@@ -132,12 +132,13 @@ a.pure-button-primary {
  */
 
 .splash-container {
-    background: #1f8dd6;
+    background-image: URL("https://images.unsplash.com/photo-1535551951406-a19828b0a76b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1046&q=80");
+    background-size: 1500px 600px;
     z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
     width: 100%;
-    height: 88%;
+    height: 687px;
     top: 0;
     left: 0;
     position: fixed !important;
@@ -155,13 +156,18 @@ a.pure-button-primary {
 }
 
 /* This is the main heading that appears on the blue section */
+@media (min-width: 4em)
 .splash-head {
-    font-size: 20px;
+    font-size: 250%;
+}
+
+.splash-head {
+    font-size: 50px;
     font-weight: bold;
     color: white;
     border: 3px solid white;
-    padding: 1em 1.6em;
-    font-weight: 100;
+    padding: 0.6em 0.6em;
+    font-weight: 70;
     border-radius: 5px;
     line-height: 1em;
 }
@@ -170,8 +176,18 @@ a.pure-button-primary {
 .splash-subhead {
     color: white;
     letter-spacing: 0.05em;
-    opacity: 0.8;
 }
+
+.pure-form input[type] {
+    border: 2px solid #ddd;
+    box-shadow: none;
+    font-size: 100%;
+    width: 50%;
+    margin-bottom: 1em;
+}
+
+
+
 
 /*
  * -- CONTENT STYLES --
@@ -216,7 +232,8 @@ a.pure-button-primary {
 
 /* This is the class used for the dark-background areas. */
 .ribbon {
-    background: #2d3e50;
+    background-image: URL("https://images.unsplash.com/photo-1483446227769-9137a8af8667?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1187&q=80");
+    background-size: 1500px 900px;
     color: #aaa;
 }
 
