--- a/client/src/Styles/Pure.css
+++ b/client/src/Styles/Pure.css
@@ -301,3 +301,48 @@ a.pure-button-primary {
         font-size: 300%;
     }
 }
+
+/* CARD TEAM */
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 30%;
+    height: 400px;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-left: 90px;
+    margin-bottom: 80px;
+  }
+  
+  .card:hover {
+    box-shadow: 80px 80px 80px 80px rgba(241, 6, 6, 0.2);
+  }
+  
+  img {
+    border-radius: 10px 10px 0 0;
+  }
+  
+  .container {
+    padding: 3px 16px;
+  }
+
+  .social {
+    width: 30%;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+.imgTeam {
+    display: block;
+    border-radius: 2px 2px 0 0;
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+  
+}
+.row {
+    justify-content: center;
+}
