--- a/client/src/Styles/Pure.css
+++ b/client/src/Styles/Pure.css
@@ -11,7 +11,7 @@
 body {
     line-height: 1.7em;
     text-align: center;
-    font-size: 15px;
+    
     font-weight: bold;
 }
 
@@ -136,13 +136,13 @@ a.pure-button-primary {
  */
 
 .splash-container {
-    background-image: URL("https://images.unsplash.com/photo-1535551951406-a19828b0a76b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1046&q=80");
+    background-image: URL("https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
     background-size: 1500px 700px;
     z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
     width: 100%;
-    height: 687px;
+    height: 638px;
     top: 0;
     left: 0;
     position: fixed !important;
@@ -166,14 +166,13 @@ a.pure-button-primary {
 }
 
 .splash-head {
-    font-size: 50px;
-    font-weight: bold;
+    font-size: 60px;
     color: white;
     border: 3px solid white;
-    padding: 0.6em 0.6em;
-    font-weight: 70;
-    border-radius: 5px;
-    line-height: 1em;
+    padding: 0.8em 0.8em;
+    font-weight: 40px;
+    border-radius: 10px;
+    line-height: 0.8em;
 }
 
 /* This is the subheading that appears on the blue section */
@@ -215,6 +214,23 @@ a.pure-button-primary {
     border-radius: 0.4em;
     margin: 0.3em;
 }
+
+.getStartedBtn {
+    border: 2px solid #ddd;
+    border-radius: 0.4em;
+    box-shadow: none;
+    box-shadow: none;
+    margin: 0.3em;
+    background-color: #1f8dd6;
+    font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    padding: 10px 15px;
+}
+
+.errorAlert{
+    color: white;
+    font-size: 25px;
+}
 /*
  * -- CONTENT STYLES --
  * This represents the content area (everything below the blue section)
@@ -223,10 +239,11 @@ a.pure-button-primary {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
     top: 87%;
-    width: 100%;
+    width: 110%;
+    height: 687px;
     min-height: 12%;
     z-index: 2;
-    background: white;
+    background: whitesmoke;
 
 }
 
@@ -258,8 +275,8 @@ a.pure-button-primary {
 
 /* This is the class used for the dark-background areas. */
 .ribbon {
-    background-image: URL("https://images.unsplash.com/photo-1483446227769-9137a8af8667?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1187&q=80");
-    background-size: 1500px 700px;
+    background-image: URL("https://images.unsplash.com/photo-1517048676732-d65bc937f952?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+    background-size: auto;
     color: #aaa;
 }
 
