--- a/client/src/Styles/Pure.css
+++ b/client/src/Styles/Pure.css
@@ -229,7 +229,7 @@ a.pure-button-primary {
 
 .errorAlert{
     color: white;
-    font-size: 25px;
+    font-size: 20px;
 }
 /*
  * -- CONTENT STYLES --
@@ -243,7 +243,7 @@ a.pure-button-primary {
     height: 687px;
     min-height: 12%;
     z-index: 2;
-    background: whitesmoke;
+    background: white;
 
 }
 
@@ -350,7 +350,7 @@ a.pure-button-primary {
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 30%;
+    width: 20%;
     height: 400px;
     border-radius: 5px;
     margin: 20px 45px 80px 45px;
@@ -370,9 +370,9 @@ a.pure-button-primary {
   }
 
   .social {
-    width: 30%;
-    margin-left: 40px;
-    margin-right: 40px;
+    width: 20%;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .imgTeam {
