--- a/client/src/Styles/Pure.css
+++ b/client/src/Styles/Pure.css
@@ -160,10 +160,10 @@ a.pure-button-primary {
 }
 
 /* This is the main heading that appears on the blue section */
-@media (min-width: 4em)
+/* @media (min-width: 4em)
 .splash-head {
     font-size: 250%;
-}
+} */
 
 .splash-head {
     font-size: 60px;
@@ -270,7 +270,7 @@ a.pure-button-primary {
     color: #1f8dd6;
 }
     .content-subhead i {
-        margin-right: 7px;
+        margin-right: 10px;
     }
 
 /* This is the class used for the dark-background areas. */
@@ -346,13 +346,17 @@ a.pure-button-primary {
     }
 }
 
+
+
+
 /* CARD TEAM */
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(5, 206, 156, 0.2);
+    background-color: whitesmoke;
     transition: 0.3s;
     width: 20%;
     height: 400px;
-    border-radius: 5px;
+    border-radius: 20px;
     margin: 20px 45px 80px 45px;
     
   }
@@ -370,20 +374,22 @@ a.pure-button-primary {
   }
 
   .social {
-    width: 20%;
+    width: 25%;
     margin-left: 20px;
     margin-right: 20px;
 }
 
 .imgTeam {
     display: block;
-    border-radius: 2px 2px 0 0;
+    border-radius: 20px;
     position: relative;
+    padding: 10px;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
     width: 100%;
+    height: 70%;
   
 }
 .row {
