--- a/client/src/Styles/Pure.css
+++ b/client/src/Styles/Pure.css
@@ -10,8 +10,9 @@
  */
 body {
     line-height: 1.7em;
-    color: #7f8c8d;
-    font-size: 13px;
+    text-align: center;
+    
+    font-weight: bold;
 }
 
 h1,
@@ -66,6 +67,7 @@ label {
     margin-bottom: 1em;
 }
 
+
 /*
  * -- PURE BUTTON STYLES --
  * I want my pure-button elements to look a little different
@@ -78,11 +80,13 @@ label {
 }
 
 a.pure-button-primary {
-    background: white;
-    color: #1f8dd6;
+    background: #1f8dd6;
+    color: white;
     border-radius: 5px;
     font-size: 120%;
 }
+
+
 
 
 /*
@@ -132,13 +136,13 @@ a.pure-button-primary {
  */
 
 .splash-container {
-    background-image: URL("https://images.unsplash.com/photo-1535551951406-a19828b0a76b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1046&q=80");
-    background-size: 1500px 600px;
+    background-image: URL("https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+    background-size: 1500px 700px;
     z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
     width: 100%;
-    height: 687px;
+    height: 638px;
     top: 0;
     left: 0;
     position: fixed !important;
@@ -155,16 +159,20 @@ a.pure-button-primary {
     text-transform: uppercase;
 }
 
+/* This is the main heading that appears on the blue section */
+/* @media (min-width: 4em)
+.splash-head {
+    font-size: 250%;
+} */
 
 .splash-head {
-    font-size: 50px;
-    font-weight: bold;
+    font-size: 60px;
     color: white;
     border: 3px solid white;
-    padding: 0.6em 0.6em;
-    font-weight: 70;
-    border-radius: 5px;
-    line-height: 1em;
+    padding: 0.8em 0.8em;
+    font-weight: 40px;
+    border-radius: 10px;
+    line-height: 0.8em;
 }
 
 /* This is the subheading that appears on the blue section */
@@ -181,9 +189,48 @@ a.pure-button-primary {
     margin-bottom: 1em;
 }
 
+.signUp {
+    border: 2px solid #ddd;
+    border-radius: 0.4em;
+    box-shadow: none;
+    box-shadow: none;
+    margin: 0.3em;
 
+}
 
+.signBtn {
+    background-color: #1f8dd6;
+    color: white;
+    padding: 0.1em 1.1em;
+    border-radius: 0.4em;
+    margin: 0.3em;
+}
 
+.logOutBtn {
+    float: right;
+    background-color: #1f8dd6;
+    color: white;
+    padding: 0.1em 1.1em;
+    border-radius: 0.4em;
+    margin: 0.3em;
+}
+
+.getStartedBtn {
+    border: 2px solid #ddd;
+    border-radius: 0.4em;
+    box-shadow: none;
+    box-shadow: none;
+    margin: 0.3em;
+    background-color: #1f8dd6;
+    font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    padding: 10px 15px;
+}
+
+.errorAlert{
+    color: white;
+    font-size: 20px;
+}
 /*
  * -- CONTENT STYLES --
  * This represents the content area (everything below the blue section)
@@ -192,7 +239,8 @@ a.pure-button-primary {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
     top: 87%;
-    width: 100%;
+    width: 110%;
+    height: 687px;
     min-height: 12%;
     z-index: 2;
     background: white;
@@ -227,14 +275,15 @@ a.pure-button-primary {
 
 /* This is the class used for the dark-background areas. */
 .ribbon {
-    background-image: URL("https://images.unsplash.com/photo-1483446227769-9137a8af8667?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1187&q=80");
-    background-size: 1500px 900px;
+    background-image: URL("https://images.unsplash.com/photo-1517048676732-d65bc937f952?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+    background-size: auto;
     color: #aaa;
 }
 
 /* This is the class used for the footer */
 .footer {
-    background: #111;
+    background: #2d3e50;
+    font-size: 15px;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -295,4 +344,48 @@ a.pure-button-primary {
     .splash-head {
         font-size: 300%;
     }
+}
+
+/* CARD TEAM */
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 20%;
+    height: 400px;
+    border-radius: 5px;
+    margin: 20px 45px 80px 45px;
+    
+  }
+  
+  .card:hover {
+    box-shadow: 40px 40px 40px 40px rgba(241, 6, 6, 0.2);
+  }
+  
+  img {
+    border-radius: 10px 10px 0 0;
+  }
+  
+  .container {
+    padding: 3px 16px;
+  }
+
+  .social {
+    width: 20%;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.imgTeam {
+    display: block;
+    border-radius: 2px 2px 0 0;
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+  
+}
+.row {
+    justify-content: center;
 }
