--- a/client/src/Styles/Pure.css
+++ b/client/src/Styles/Pure.css
@@ -216,15 +216,13 @@ a.pure-button-primary {
 }
 
 .getStartedBtn {
-    border: 2px solid #ddd;
+    background-color: #1f8dd6;
+    color: white;
+    padding: 0.5em 2.3em;
     border-radius: 0.4em;
     box-shadow: none;
     box-shadow: none;
     margin: 0.3em;
-    background-color: #1f8dd6;
-    font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    color: white;
-    padding: 10px 15px;
 }
 
 .errorAlert{
@@ -352,7 +350,7 @@ a.pure-button-primary {
 /* CARD TEAM */
 .card {
     box-shadow: 0 4px 8px 0 rgba(5, 206, 156, 0.2);
-    background-color: whitesmoke;
+    background-color: white;
     transition: 0.3s;
     width: 20%;
     height: 400px;
@@ -389,7 +387,7 @@ a.pure-button-primary {
     top: 0;
     bottom: 0;
     width: 100%;
-    height: 70%;
+    height: 65%;
   
 }
 .row {
