--- a/client/src/Styles/Pure.css
+++ b/client/src/Styles/Pure.css
@@ -218,7 +218,7 @@ a.pure-button-primary {
 .getStartedBtn {
     background-color: #1f8dd6;
     color: white;
-    padding: 0.5em 2.3em;
+    padding: 0.5em 3em;
     border-radius: 0.4em;
     box-shadow: none;
     box-shadow: none;
@@ -227,7 +227,7 @@ a.pure-button-primary {
 
 .errorAlert{
     color: white;
-    font-size: 20px;
+    font-size: 18px;
 }
 /*
  * -- CONTENT STYLES --
@@ -392,4 +392,10 @@ a.pure-button-primary {
 }
 .row {
     justify-content: center;
+}
+
+.quote {
+    color: #1f8dd6;
+    font-weight: bold;
+    font-size: 35px;
 }
